--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1225,12 +1225,13 @@
     <script>
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "tech-zentrale.firebaseapp.com",
-            projectId: "tech-zentrale",
-            storageBucket: "tech-zentrale.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyBORD0TJMSeWoZsFVvAO0lv1Jc9IpW7wbs",
+            authDomain: "vinnie-a057e.firebaseapp.com",
+            projectId: "vinnie-a057e",
+            storageBucket: "vinnie-a057e.firebasestorage.app",
+            messagingSenderId: "725405233413",
+            appId: "1:725405233413:web:986373f9c8e658dfbc876c",
+            measurementId: "G-5JXYTEHRKG"
         };
 
         // Initialize Firebase
